--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -110,16 +110,23 @@
 
       // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
       // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-      const category = document.querySelector(".mw-category");
+      /* const category = document.querySelector(".mw-category");
       const links = Array.from(category.querySelectorAll("a"));
       console.log(links);
       const names = links.map((link) => link.textContent);
       console.log(names);
       const filteredNames = names.filter((name) => name.includes("de"));
       console.log(filteredNames);
+      */
 
       // 7. sort Exercise
       // Sort the people alphabetically by last name
+      const alphabetical = people.sort((personA, personB) => {
+        const [lastNameA, firstNameA] = personA.split(", ");
+        const [lastNameB, firstNameB] = personB.split(", ");
+        return lastNameA > lastNameB ? 1 : -1;
+      });
+      console.log(alphabetical);
 
       // 8. Reduce Exercise
       // Sum up the instances of each of these
@@ -139,6 +146,16 @@
         "car",
         "truck",
       ];
+
+      const transportation = data.reduce((obj, item) => {
+        if (!obj[item]) {
+          obj[item] = 0;
+        }
+        obj[item]++;
+        return obj;
+      }, {});
+
+      console.log(transportation);
     </script>
   </body>
 </html>
